--- a/index.html
+++ b/index.html
@@ -33,6 +33,41 @@
     </div>
 </section>
 
+<section>
+    <h2 class="main-part-section-two">My Plans</h2>
+
+<div class="plan-container">
+    <div class="plan">
+        <img src="/images/icons/web.png" alt="">
+        <p class="plan-title">Web Development</p>
+        <p class="plan-description">I want to start</p>
+    </div>
+    <div class="plan">
+        <img src="/images/icons/js.png" alt="">
+        <p class="plan-title">Javascript</p>
+        <p class="plan-description">I want to learn</p>
+    </div>
+    <div class="plan">
+        <img src="/images/icons/smoke.png" alt="">
+        <p class="plan-title">Smoking Habit</p>
+        <p class="plan-description">I want to end</p>
+    </div>
+    <div class="plan">
+        <img src="/images/icons/ecom.png" alt="">
+        <p class="plan-title">e-commerce</p>
+        <p class="plan-description">I want to develop</p>
+    </div>
+</div>
+</section>
+
+<section class="main-part-section-last">
+    <h2 class="image-gradiant-title">Always keep a positive mindset <br>
+        <button class="button-primary-1">Call Now</button>
+    </h2>
+
+</section>
+
+
     </main>
     <footer></footer>
 </body>
