--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 
 <div class="plan-container">
     <div class="plan">
-        <img src="/images/icons/web.png" alt="">
+        <img src="images/icons/web.png" alt="">
         <p class="plan-title">Web Development</p>
         <p class="plan-description">I want to start</p>
     </div>
     <div class="plan">
-        <img src="/images/icons/js.png" alt="">
+        <img src="images/icons/js.png" alt="">
         <p class="plan-title">Javascript</p>
         <p class="plan-description">I want to learn</p>
     </div>
     <div class="plan">
-        <img src="/images/icons/smoke.png" alt="">
+        <img src="images/icons/smoke.png" alt="">
         <p class="plan-title">Smoking Habit</p>
         <p class="plan-description">I want to end</p>
     </div>
     <div class="plan">
-        <img src="/images/icons/ecom.png" alt="">
+        <img src="images/icons/ecom.png" alt="">
         <p class="plan-title">e-commerce</p>
         <p class="plan-description">I want to develop</p>
     </div>
@@ -67,8 +67,30 @@
 
 </section>
 
+<section class="section-future">
+    <div>
+        <h2 class="about-future">Future</h2>
+        <p class="future-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <p class="future-description-1">Email : info@gmail.com</p>
+        <p class="future-description-1">Phone : 01500 00 00 00</p>
+        <div class="icon">
+        <a href=""><img src="images/icons/youtube.png" alt=""></a>
+        <a href=""><img src="images/icons/fb.png" alt=""></a>
+        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+    </div>
+    </div>
+    <div class="sub-1">
+        <h4 class="Subscribe">Subscribe</h4>
+        <form action="">
+            <input class="input-1" type="email" name="" id="" placeholder="Enter Your Email">
+            <input class="button-primary-1" type="submit" value="Submit">
+        </form>
+    </div>
+</section>
 
     </main>
-    <footer></footer>
+<footer>
+    
+</footer>
 </body>
 </html>
