--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
         <h1 class="title">All Thinks Are Possible If You believe</h1>
-        <p class="sub-title">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <p class="sub-title">You Have Always have to believe in yourself. You Can Do anything. You Can Accomplish anything. Try Harder, Try Smarter. You Have a gift of Perservierence. Hard Work Betrays None.</p>
         <button class="button-primary">Contact Us</button>
 
     </header>
@@ -21,12 +21,13 @@
     <div class="main-part-one">
         <div class="main-part-two">
             <h3 class="main-part-title">My failures of previous year</h3>
-            <p class="main-part-sub-title">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
 
-                <li>Contrary to popular belief, is not simply.</li>
-                <li>Contrary to popular belief.</li>
-                <li>Contrary to popular , is not simply.</li>
-                <li>Contrary to popular belief, is not simply.</li>
+            <p class="main-part-sub-title">I Always used to think-I don't know if i can take it, Sometimes it seems like the whole thing is pointless. Like I'm a loser & I will Always be a loser, i don't know What to do. Then i get- Right! All the effort is pointless if i dont belive in myself. </p>
+
+                <li>I has something important to prove.</li>
+                <li>I'm Determined to prove it.</li>
+                <li>I will keep practice.</li>
+                <li>I will never gave up.</li>
 
         </div>
         <img src="images/person.png" alt="">
@@ -70,9 +71,10 @@
 <section class="section-future">
     <div>
         <h2 class="about-future">Future</h2>
-        <p class="future-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <p class="future-description">I will never gave up. I don't know how to give up. I don't
+            want to see tears from anyone close to me ever-again. I want to be a web developer. I want to prove it to the hold world. Happy Coding</p>
         <p class="future-description-1">Email : info@gmail.com</p>
-        <p class="future-description-1">Phone : 01500 00 00 00</p>
+        <p class="future-description-1">Phone : +88 01300000080</p>
         <div class="icon">
         <a href=""><img src="images/icons/youtube.png" alt=""></a>
         <a href=""><img src="images/icons/fb.png" alt=""></a>
@@ -90,7 +92,7 @@
 
     </main>
 <footer>
-    
+
 </footer>
 </body>
 </html>
